--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add" />
+        android:text="Edit" />
 
     <EditText
         android:id="@+id/txtNewItem"
@@ -38,7 +38,8 @@
         android:id="@+id/btnCancel"
         android:layout_alignTop="@+id/btnSave"
         android:layout_toRightOf="@+id/btnSave"
-        android:layout_toEndOf="@+id/btnSave" />
+        android:layout_toEndOf="@+id/btnSave"
+        android:onClick="onEditItemClick" />
 
 </RelativeLayout>
 
