--- a/app/src/main/res/layout/edit_add_item.xml
+++ b/app/src/main/res/layout/edit_add_item.xml
@@ -18,4 +18,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/cancel_new_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cancel_24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/submit_new_item"
+        android:layout_toStartOf="@+id/submit_new_item"
+        android:onClick="onnewcanItemClick" />
+
 </RelativeLayout>
