--- a/app/src/main/res/layout/edit_add_item.xml
+++ b/app/src/main/res/layout/edit_add_item.xml
@@ -16,6 +16,15 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_done_24dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/cancel_new_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cancel_24dp"
+        android:layout_above="@+id/submit_new_item"
+        android:layout_alignLeft="@+id/submit_new_item"
+        android:layout_alignStart="@+id/submit_new_item" />
 </RelativeLayout>
